tests/Rules/Aria/Fixtures/valid/aria_valid_values.html.twig
<div aria-hidden="true" aria-checked="mixed">ok</div>
<div aria-hidden="{{ dynamic }}">ignore</div>
