tests/Rules/Aria/Fixtures/invalid/menuitem_missing_parent.html.twig
{# 1 errors #}
<div role="menuitem">Orphan</div>
